# tomoki_kagawa_portfolio

./: README.md
htdocs/: Arcadecontroller.html  C++.html  Java.html  JavaScript.html  PHP.html  README.md  VBA.html  Wordpress.html  index.php  style.css
htdocs/Arduino_C++/: README.md
htdocs/Arduino_C++/C++/BreakingBlocks/: .GameoverDialog.cpp.swo  BreakingBlock.cpp  BreakingBlock.h  CMakeLists.txt  Gameclear.cpp  Gameclear.h  Gameover.cpp  Gameover.h  main.cpp
htdocs/Arduino_C++/C++/FaceController/: CMakeLists.txt  main.cpp
htdocs/Arduino_C++/C++/SerialCommunication/: CMakeLists.txt  SerialCommunication.cpp  SerialCommunication.h  main.cpp
htdocs/Java/ShockMaze/: README.md  build.gradle  settings.gradle
htdocs/ec_site/: README.md  cart.php  detail.php  favorite.php  history.php  index.php  list.php  logout.php  management.php  order.php  personal.php  registration.php
htdocs/ec_site/assets/: script.js  style.css
htdocs/ec_site/image/: 説明.txt
htdocs/js/: README.md  index.html  script.js  style.css
include/: README.md
include/model/: cart_model.php  detail_model.php  favorite_model.php  history_model.php  index_model.php  list_model.php  logout_model.php  management_model.php  order_model.php  personal_model.php  registration_model.php
include/utility/: common.php  cookie_session.php  database.php
include/view/: cart_view.php  detail_view.php  favorite_view.php  history_view.php  index_view.php  list_view.php  logout_view.php  management_view.php  order_view.php  personal_view.php  registration_view.php
wp/samplesite/: README.md  archive.php  category-blog.php  footer.php  functions.php  header.php  index.php  page-company.php  page.php  single.php
(+20 files in other folders)
